--- a/test.html
+++ b/test.html
@@ -15,5 +15,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <h1>URL参数展示：</h1>
+  <div>
+     <p>Key1: <span id="key1-display"></span></p >
+     <p>Key2: <span id="key2-display"></span></p >
+ </div>
+  <div id="display-keys">
+  </div>
 </body>
 </html>
